--- a/fitlifepro/src/app/component/dashboard/dashboard.component.html
+++ b/fitlifepro/src/app/component/dashboard/dashboard.component.html
@@ -1,3 +1,34 @@
+<mat-sidenav mode="side" opened>
+  <div class="logo">
+    <img src="../../IMG/logo1.png" alt="avatar" class="avatar"/>
+    <div class="user-info">
+      <strong>chaimaa</strong>
+    </div>
+  </div>
+
+  <mat-nav-list>
+    <a mat-list-item routerLink="/dashboard">
+      <mat-icon>dashboard</mat-icon>
+      <span>Dashboard</span>
+    </a>
+
+    <a mat-list-item routerLink="/workout">
+      <mat-icon>fitness_center</mat-icon>
+      <span>Workout</span>
+    </a>
+
+    <a mat-list-item routerLink="/activity">
+      <mat-icon>directions_run</mat-icon>
+      <span>Activity</span>
+    </a>
+
+    <a mat-list-item routerLink="/goal">
+      <mat-icon>assessment</mat-icon>
+      <span>Goal</span>
+    </a>
+  </mat-nav-list>
+</mat-sidenav>
+
 <mat-grid-list cols="3" rowHeight="fit" gutterSize="20px">
   <mat-grid-tile [colspan]="1" [rowspan]="1">
     <mat-card>
@@ -56,18 +87,34 @@
   </mat-grid-tile>
 </mat-grid-list>
 
-<div nz-row style="margin-top:15px;">
-  <div nz-col nzXs="2" nzSm="4" nzMd="6" nzLg="8" nzXl="10">
-    <nz-card nzTitle="Recent Workouts" style="background-color:aliceblue;">
-      <canvas #workoutLineChart></canvas>
-    </nz-card>
-  </div>
-  <div nz-col nzXs="20" nzSm="16" nzMd="12" nzLg="8" nzXl="4">
+<div class="mat-grid" style="margin-top: 15px;">
+  <mat-grid-list cols="12" gutterSize="16px">
+    <mat-grid-tile [colspan]="2" [rowspan]="1" class="hidden-xs"></mat-grid-tile>
+    <mat-grid-tile [colspan]="4" [rowspan]="1" class="hidden-sm"></mat-grid-tile>
+    <mat-grid-tile [colspan]="6" [rowspan]="1" class="hidden-md"></mat-grid-tile>
+    <mat-grid-tile [colspan]="8" [rowspan]="1" class="hidden-lg"></mat-grid-tile>
+    <mat-grid-tile [colspan]="10" [rowspan]="1" class="hidden-xl"></mat-grid-tile>
 
-  </div>
-  <div nz-col nzXs="2" nzSm="4" nzMd="6" nzLg="8" nzXl="10">
-    <nz-card nzTitle="Recent Activities" style="background-color:aliceblue;">
-      <canvas #activityLineChart></canvas>
-    </nz-card>
-  </div>
+    <mat-grid-tile [colspan]="8" [rowspan]="1" class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-2">
+      <mat-card style="background-color: aliceblue;">
+        <mat-card-title>Recent Workouts</mat-card-title>
+        <mat-card-content>
+          <canvas #workoutLineChart></canvas>
+        </mat-card-content>
+      </mat-card>
+    </mat-grid-tile>
+
+    <mat-grid-tile [colspan]="4" [rowspan]="1" class="hidden-xs hidden-sm hidden-md hidden-lg hidden-xl">
+    </mat-grid-tile>
+
+    <mat-grid-tile [colspan]="8" [rowspan]="1" class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-2">
+      <mat-card style="background-color: aliceblue;">
+        <mat-card-title>Recent Activities</mat-card-title>
+        <mat-card-content>
+          <canvas #activityLineChart></canvas>
+        </mat-card-content>
+      </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
 </div>
+
