--- a/fitlifepro/src/app/component/dashboard/user-dashboard/user-dashboard.component.html
+++ b/fitlifepro/src/app/component/dashboard/user-dashboard/user-dashboard.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="layout">
   <mat-sidenav mode="side" opened>
     <div class="logo">
-      <img src="../../IMG/logo1.png" alt="avatar" class="avatar"/>
+      <img src="./app/component/IMG/1000_F_208442470_4gH0kWBR8qkImXaz4R3AUALz1iJiUKiO.jpg" alt="Logo">
       <div class="user-info">
         <strong>chaimaa</strong>
       </div>
@@ -9,7 +9,7 @@
 
     <mat-nav-list>
       <a mat-list-item routerLink="/dashboard">
-        <mat-icon>dashboard</mat-icon>
+        <mat-icon >dashboard</mat-icon>
         <span>Dashboard</span>
       </a>
 
