--- a/fitlifepro/src/app/component/goal/goal.component.html
+++ b/fitlifepro/src/app/component/goal/goal.component.html
@@ -1,4 +1,34 @@
 <div class="container">
+  <mat-sidenav mode="side" opened>
+    <div class="logo">
+      <img src="../../IMG/logoooo.png" alt="avatar" class="avatar"/>
+      <div class="user-info">
+        <strong>chaimaa</strong>
+      </div>
+    </div>
+
+    <mat-nav-list>
+      <a mat-list-item routerLink="/dashboard">
+        <mat-icon>dashboard</mat-icon>
+        <span>Dashboard</span>
+      </a>
+
+      <a mat-list-item routerLink="/workout">
+        <mat-icon>fitness_center</mat-icon>
+        <span>Workout</span>
+      </a>
+
+      <a mat-list-item routerLink="/activity">
+        <mat-icon>directions_run</mat-icon>
+        <span>Activity</span>
+      </a>
+
+      <a mat-list-item routerLink="/goal">
+        <mat-icon>assessment</mat-icon>
+        <span>Goal</span>
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
   <div class="row">
     <h1 class="mat-h1">Goal</h1>
   </div>
@@ -21,9 +51,11 @@
               <input matInput [matDatepicker]="startPicker" formControlName="startDate">
               <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
               <mat-datepicker #startPicker></mat-datepicker>
-              <mat-error *ngIf="goalForm.get('startDate')?.hasError('required')">
-                Please input the start date!
-              </mat-error>
+              @if (goalForm.get('startDate')?.hasError('required')) {
+                <mat-error>
+                  Please input the start date!
+                </mat-error>
+              }
             </mat-form-field>
 
             <mat-form-field appearance="fill" class="w-100">
@@ -31,9 +63,11 @@
               <input matInput [matDatepicker]="endPicker" formControlName="endDate">
               <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
               <mat-datepicker #endPicker></mat-datepicker>
-              <mat-error *ngIf="goalForm.get('endDate')?.hasError('required')">
-                Please input the end date!
-              </mat-error>
+              @if (goalForm.get('endDate')?.hasError('required')) {
+                <mat-error>
+                  Please input the end date!
+                </mat-error>
+              }
             </mat-form-field>
 
             <button mat-raised-button color="primary" class="w-100" [disabled]="goalForm.invalid">
@@ -50,19 +84,22 @@
         </mat-card-header>
         <mat-card-content>
           <mat-list>
-            <mat-list-item *ngFor="let goal of goals">
-              <div class="goal-item">
-                Description: <strong>{{goal.description}}</strong>
-                -
-                Start date: <strong>{{goal.startDate | date}}</strong>
-                -
-                End date: <strong>{{goal.endDate | date}}</strong>
-                -
-                Achieved: <strong>{{goal.achieved}}</strong>
-                <mat-icon *ngIf="!goal.achieved"  (click)="updateStatus(goal.id)" )
-                          color="primary" style="margin-left:15px;">check_circle</mat-icon>
-              </div>
-            </mat-list-item>
+            @for (goal of goals; track goal.id) {
+              <mat-list-item>
+                <div class="goal-item">
+                  Description: <strong>{{goal.description}}</strong>
+                  -
+                  Start date: <strong>{{goal.startDate | date}}</strong>
+                  -
+                  End date: <strong>{{goal.endDate | date}}</strong>
+                  -
+                  Achieved: <strong>{{goal.achieved}}</strong>
+                  @if (!goal.achieved) {
+                    <mat-icon (click)="updateStatus(goal.id)" color="primary" style="margin-left:15px;">check_circle</mat-icon>
+                  }
+                </div>
+              </mat-list-item>
+            }
           </mat-list>
         </mat-card-content>
       </mat-card>
