--- a/fitlifepro/src/app/component/dashboard/user-dashboard/user-dashboard.component.html
+++ b/fitlifepro/src/app/component/dashboard/user-dashboard/user-dashboard.component.html
@@ -1,4 +1,27 @@
 <mat-sidenav-container class="layout">
+  <nav class="navbar">
+    <div class="navbar-content">
+      <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/4e5188a6ffa33ceac53e40d44849bdb63fa0d1aea68f686be38a0c0e68f884c5?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Company Logo" class="company-logo" />
+      <ul class="nav-links">
+        <li><a href="home" class="nav-link nav-link-active">Home</a></li>
+        <li><a href="app-about-us" class="nav-link">About Us</a></li>
+        <li><a href="app-contact-us" class="nav-link">Contact Us</a></li>
+        <li><a href="app-category" class="nav-link">Category</a></li>
+        <li><a href="app-blogs" class="nav-link">Blogs</a></li>
+        <li><a href="app-all-recipe" class="nav-link">Recipes</a></li>
+      </ul>
+      <div class="nav-actions">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/c40b77d621b039aa88ee37d9cd9f5caec0dae5a1264a5efa1db08d71e3b7e247?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Gift icon" class="gift-icon" />
+
+        <a href="app-gift-a-plan" class="nav-link">Gift A Plan</a>
+        <button class="cart-button" aria-label="Shopping Cart">
+          <span class="visually-hidden">Shopping Cart</span>
+        </button>
+        <a href="app-login" class="nav-button">Login</a>
+        <a href="app-sign-up" class="nav-button">Sign up</a>
+      </div>
+    </div>
+  </nav>
   <mat-sidenav mode="side" opened>
     <div class="logo">
       <img src="./app/component/IMG/1000_F_208442470_4gH0kWBR8qkImXaz4R3AUALz1iJiUKiO.jpg" alt="Logo">
@@ -8,22 +31,22 @@
     </div>
 
     <mat-nav-list>
-      <a mat-list-item routerLink="/dashboard">
-        <mat-icon >dashboard</mat-icon>
+      <a mat-list-item [routerLink]="['/dashboard']">
+        <mat-icon>dashboard</mat-icon>
         <span>Dashboard</span>
       </a>
 
-      <a mat-list-item routerLink="/workout">
+      <a mat-list-item [routerLink]=['/workout']>
         <mat-icon>fitness_center</mat-icon>
         <span>Workout</span>
       </a>
 
-      <a mat-list-item routerLink="/activity">
+      <a mat-list-item [routerLink]="['/activity']">
         <mat-icon>directions_run</mat-icon>
         <span>Activity</span>
       </a>
 
-      <a mat-list-item routerLink="/goal">
+      <a mat-list-item [routerLink]=['/goal']>
         <mat-icon>assessment</mat-icon>
         <span>Goal</span>
       </a>
@@ -36,3 +59,4 @@
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
+
