--- a/fitlifepro/src/app/component/dashboard/user-dashboard/user-dashboard.component.html
+++ b/fitlifepro/src/app/component/dashboard/user-dashboard/user-dashboard.component.html
@@ -30,23 +30,23 @@
       </div>
     </div>
 
+
     <mat-nav-list>
-      <a mat-list-item [routerLink]="['/dashboard']">
+      <a mat-list-item routerLink="/dashboard">
         <mat-icon>dashboard</mat-icon>
         <span>Dashboard</span>
       </a>
-
-      <a mat-list-item [routerLink]=['/workout']>
+      <a mat-list-item routerLink="/workout">
         <mat-icon>fitness_center</mat-icon>
         <span>Workout</span>
       </a>
 
-      <a mat-list-item [routerLink]="['/activity']">
+      <a mat-list-item routerLink="/activity">
         <mat-icon>directions_run</mat-icon>
         <span>Activity</span>
       </a>
 
-      <a mat-list-item [routerLink]=['/goal']>
+      <a mat-list-item routerLink="/goal">
         <mat-icon>assessment</mat-icon>
         <span>Goal</span>
       </a>
