--- a/fitlifepro/src/app/component/sign-up/sign-up.component.html
+++ b/fitlifepro/src/app/component/sign-up/sign-up.component.html
@@ -16,7 +16,7 @@
   <section class="signup-section">
     <div class="signup-container">
       <form class="signup-form" (ngSubmit)="signup()">
-        <input type="text" [(ngModel)]="name" name="name" placeholder="Enter your name" class="form-input" aria-label="Enter your name" required />
+        <input type="text" [(ngModel)]="username" name="name" placeholder="Enter your username" class="form-input" aria-label="Enter your name" required />
         <input type="email" [(ngModel)]="email" name="email" placeholder="xyz@gmail.com" class="form-input" aria-label="Enter your email" required />
         <input type="password" [(ngModel)]="password" name="password" placeholder="Enter your password" class="form-input" aria-label="Enter your password" required />
         <input type="password" [(ngModel)]="confirmPassword" name="confirmPassword" placeholder="Confirm your password" class="form-input" aria-label="Confirm your password" required />
